@@ -1,3 +1,5 @@
+- Allow using OnMODXInit instead of OnHandleRequest event
+
 ++  ContextRouter 1.1.0-pl
 ++  Released: 2012-07-18
 ++++++++++++++++++++++++++++
